--- a/servidor/package.json
+++ b/servidor/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon . "
   },
-  "author": "Manuel Villar",
+  "author": "Abel Mataix y Hugo Micó",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.7"
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "mongoose-unique-validator": "^2.0.3",
+    "slug": "^5.1.0"
   }
 }
