--- a/cliente/package.json
+++ b/cliente/package.json
@@ -24,6 +24,7 @@
     "hammerjs": "^2.0.8",
     "ngx-hammerjs-carousel": "^1.0.4",
     "ngx-infinite-scroll": "^10.0.1",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
