--- a/servidor/package.json
+++ b/servidor/package.json
@@ -16,9 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "mongoose-unique-validator": "^2.0.3",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "slug": "^5.1.0"
   }
 }
