--- a/cliente/package.json
+++ b/cliente/package.json
@@ -25,6 +25,7 @@
     "ngx-hammerjs-carousel": "^1.0.4",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-pagination": "^5.1.1",
+    "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
