--- a/cliente/package.json
+++ b/cliente/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ng serve --openssl-legacy-provider start",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; ng build"
   },
   "private": true,
   "dependencies": {
