--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 version: "3"
 
 services:
@@ -34,4 +33,6 @@ services:
 
 networks:
   twohand:
-    driver: bridge
+  prometheus:
+    external: 
+      name: network-log
