--- a/servidor/package.json
+++ b/servidor/package.json
@@ -13,6 +13,8 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "prom-client": "^12.0.0",
+    "response-time": "^2.3.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
